--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://admin:admin_pass@cumcluster.xucpefj.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://admin:admin_pass@cluster0.1ztfkwm.mongodb.net/?retryWrites=true&w=majority
