--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.15",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -16,10 +17,13 @@
     "eslint-config-next": "13.4.19",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
+    "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-redux": "^8.1.2",
+    "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.3"
   }
 }
