--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
@@ -22,6 +23,7 @@
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
