--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
