--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
