--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.1.2",
     "redux-thunk": "^2.4.2",
     "tailwindcss": "3.3.3"
