--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-redux-wrapper": "^8.1.0",
