--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.0",
+    "connect-mongodb-session": "^3.1.1",
+    "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.5.0",
@@ -34,6 +37,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^8.1.2",
     "redux-thunk": "^2.4.2",
+    "sharp": "^0.32.6",
     "tailwindcss": "3.3.3"
   }
 }
