--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-redux-wrapper": "^8.1.0",
-    "postcss": "8.4.29",
+    "postcss": ">=8.4.29",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
