--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "13.5.4",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.31",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
