--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^4.11.0",
     "react-loading": "^2.0.3",
     "react-redux": "^8.1.2",
+    "react-toastify": "^9.1.3",
     "redux-thunk": "^2.4.2",
     "sharp": "^0.32.6",
     "tailwindcss": "3.3.3"
