--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongodb-session": "^3.1.1",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
